added some test pages and some more code

--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -1,14 +1,18 @@
+{% if not tab %}
+  {% set tab = {} %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="et">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <title>{{ config["SITE_NAME"] }} - {{ title }}</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,7 +22,24 @@
     <![endif]-->
   </head>
   <body>
-    {% block body %}{% endblock %}
+    <div class="container">
+      <div class="header">
+        <ul class="nav nav-pills pull-right" id="maintabs">
+          <li class="{{ tab['blog'] }}"><a href="{{ url_for('blog')}}" data-toggle="tab2">Blog</a></li>
+          <li class="{{ tab['projects'] }}"><a href="#projects" data-toggle="tab2">Projects</a></li>
+          <li class="{{ tab['about'] }}"><a href="#about" data-toggle="tab2">About Me</a></li>
+          <li class="{{ tab['login'] }}"><a href="{{ url_for('login')}}" data-toggle="tab2" alt="Login"><span class="glyphicon glyphicon-cog"></span></a></li>
+        </ul>
+        <h3 class="text-muted">{{ config["SITE_NAME"] }}</h3>
+      </div><!-- header -->
+      {% for message in get_flashed_messages() %}
+      <div class="alert alert-info alert-dismissable">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        {{ message }}
+      </div>
+      {% endfor %}
+      {% block body %}{% endblock %}
+    </div> <!-- container -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
