--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -92,7 +92,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signin input[type="text"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -103,3 +103,19 @@ body {
   border-top-right-radius: 0;
 }
 
+.nav-white {
+  background-color:#FFF;
+  border-color:#FFF;
+}
+
+.navbar-toggle {
+  border-radius: 0px;
+}
+
+.navbar-brand {
+  font-size:32px;
+}
+
+.navbar-collapse {
+  border-top:0px;
+}
