--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -23,19 +23,34 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right" id="maintabs">
+      <div class="navbar navbar-default nav-white">
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="/" class="navbar-brand">{{ config["SITE_NAME"] }}</a>
+
+        </div>
+        <div class="collapse navbar-collapse pull-right" id="main-nav-collapse">
+        <ul class="nav navbar-nav navbar-right" id="maintabs">
           <li class="{{ tab['blog'] }}"><a href="{{ url_for('blog')}}" data-toggle="tab2">Blog</a></li>
           <li class="{{ tab['projects'] }}"><a href="#projects" data-toggle="tab2">Projects</a></li>
-          <li class="{{ tab['about'] }}"><a href="#about" data-toggle="tab2">About Me</a></li>
+          <li class="{{ tab['about'] }}"><a href="{{ url_for('about_me')}}" data-toggle="tab2">About Me</a></li>
           <li class="{{ tab['login'] }}"><a href="{{ url_for('login')}}" data-toggle="tab2" alt="Login"><span class="glyphicon glyphicon-cog"></span></a></li>
         </ul>
-        <h3 class="text-muted">{{ config["SITE_NAME"] }}</h3>
+        </div>
       </div><!-- header -->
-      {% for message in get_flashed_messages() %}
-      <div class="alert alert-info alert-dismissable">
+      {% for category, message in get_flashed_messages(with_categories=True) %}
+      <div class="alert alert-{{ category }} alert-dismissable">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        {{ message }}
+        {% if isinstance(message, (list, tuple)) %}
+            <strong>{{ message[0] }}:</strong> {{ message[1] }}
+        {% else %}
+            <strong>{{ message }}</strong>
+        {% endif %}
       </div>
       {% endfor %}
       {% block body %}{% endblock %}
