--- a/blog/templates/show_post.html
+++ b/blog/templates/show_post.html
@@ -5,6 +5,6 @@
 <div class="page-header">
   <h2><a href="{{ url_for('show_post', slug=post.slug) }}">{{ post.title }}</a></h2>
 </div>
-<p>{{ post.body }}</p>
+<p>{{ post.body|markdown }}</p>
 {#<p>{{ post.created_at.strftime('%H:%M %Y-%m-%d') }}</p>#}
 {% endblock %}
